[package]
name = "treesitter-coupling-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c-sharp = "0.23"

[build-dependencies]
cc = "*"
