[package]
name = "treesitter-coupling-analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
colored = "3.0.0"

# tree-sitter
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-c-sharp = "0.23"

# tree-sitter graphs
stack-graphs = "0.14.1"
tree-sitter-graph = "0.12.0"
tree-sitter-stack-graphs = "0.10.0"
tree-sitter-stack-graphs-typescript = "0.4.0"

[build-dependencies]
cc = "*"
